<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".model.WorkoutFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.gymlevon.model.BookViewModel" />
        <variable
            name="workoutFragment"
            type="com.example.gymlevon.model.WorkoutFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">
        <RadioGroup
            android:id="@+id/workout_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <RadioButton
                android:id="@+id/aerobic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.workout.equals(@string/aerobic)}"
                android:onClick="@{()-> viewModel.setWorkout(@string/aerobic)}"
                android:text="@string/aerobic"/>
            <RadioButton
                android:id="@+id/strenth_building"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.workout.equals(@string/strenth_building)}"
                android:onClick="@{()-> viewModel.setWorkout(@string/strenth_building)}"
                android:text="@string/strength_building"/>
            <RadioButton
                android:id="@+id/balance_training"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.workout.equals(@string/balance_training)}"
                android:onClick="@{()-> viewModel.setWorkout(@string/balance_training)}"
                android:text="@string/balance_training"/>
            <RadioButton
                android:id="@+id/endurance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.workout.equals(@string/endurance)}"
                android:onClick="@{()-> viewModel.setWorkout(@string/endurance)}"
                android:text="@string/endurance"/>
            <RadioButton
                android:id="@+id/flexibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.workout.equals(@string/flexibility)}"
                android:onClick="@{()-> viewModel.setWorkout(@string/flexibility)}"
                android:text="@string/flexibility"/>
            <RadioButton
                android:id="@+id/moderate_intensity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.workout.equals(@string/moderate_intensity)}"
                android:onClick="@{()-> viewModel.setWorkout(@string/moderate_intensity)}"
                android:text="@string/moderate_intensity"/>
            <RadioButton
                android:id="@+id/vigorous_exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.workout.equals(@string/vigorous_exercise)}"
                android:onClick="@{()-> viewModel.setWorkout(@string/vigorous_exercise)}"
                android:text="@string/vigorous_exercise"
                />

        </RadioGroup>
        <View
            android:id="@+id/divider"
            style="@style/Widget.gym.Divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/workout_options"/>

        <TextView
            android:id="@+id/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.gym.TextView"
            android:layout_margin="16dp"
            android:text="@{@string/subtotal_price(viewModel.price)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            tools:text="subtotal Ksh100.00"/>
        <Button
            android:id="@+id/cancel_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> workoutFragment.cancelBooking()}"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@id/next_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/next_button" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/next"
            android:onClick="@{()->workoutFragment.goNextScreen()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@+id/subtotal"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>